--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
+    <p style="text-align:center; color:black; font-family:sans-serif;">
+   This template is provided by 
+  <a href="https://profilioo.com" target="_blank" style="color:#2563eb; text-decoration:underline;">Profilioo</a>. and Get Free
+  <a href="https://blog.profilioo.com/free-basotho-cultural-heritage-website-template/" target="_blank" style="color:#2563eb; text-decoration:underline;">Download now</a>
+</p>
+<hr>
 <body>
     <header>
         <div class="container">
